Fixed alignment of card img

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ ul {
     padding: 16px 10vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 8px;
 }
 
@@ -163,19 +162,19 @@ a {
 .card_container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
 }
 
 .card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     flex-wrap: wrap;
     width: 300px;
-    height: 600px;
     height: auto;
     flex: 0 0 auto;
     margin: 20px;
+    margin-bottom: 60px;
 }
 
 .card-img {
@@ -185,19 +184,17 @@ a {
     border-width: 5px;
     width: 300px;
     height: 300px;
-    flex: 0 0 auto;
+    flex: 0 0 300px;
     margin-bottom: 32px;
 }
 
 .card .subtext {
     flex: 0 0 auto;
-    width: 310px;
-    height: 252px;
 }
 
 .card-img img {
-    height: 100%;
-    width: 100%;
+    height: 300px;
+    width: 300px;
     border-radius: 16px;
 }
 
